# MultiCameraCooperation

./: CMakeLists.txt  README.en.md  README.md  package.xml
bash/: base2servogp_broadcaster.sh  camA_Estimation.sh  camB_Estimation.sh  camC_Estimation.sh  camD_Estimation.sh  multi_cam_cooperation.sh  multi_camera_cooperation.sh  onborad_record.sh
data/: cam_pos3.txt  q_body_to_drone_camB.txt  q_body_to_drone_camC.txt  q_camera_to_drone_camC.txt  t_body_to_drone_camB.txt  t_body_to_drone_camC.txt
include/multi_camera_cooperation/: landmark_extraction_node_ros.h  math_tools.h  multi_camera_cooperation_ros_test.h  pnp_cooperation_node_ros.h  pnp_target_node_ros.h
include/multi_camera_fusion/: multi_camera_fusion_ros_test.h  pnp_target_node_ros.h
launch/: base2servogp_broadcaster.launch  camA_pnp_target_node_ros_test.launch  camB_pnp_target_node_ros_test.launch  camC_pnp_target_node_ros_test.launch  camD_pnp_target_node_ros_test.launch  pnp_target_node_ros_test.launch
msg/: Markers.msg
src/: base2servogp_broadcaster.cpp  cam_pos.cpp  landmark_extraction_node_ros.cpp  math_tools.cpp  multi_cam_cooperation.cpp  multi_camera_cooperation_ros_test.cpp  multi_camera_fusion_ros_test.cpp  pnp_cooperation_node_ros.cpp  pnp_target_node_ros.cpp  single_cam_process.cpp
